assignment of lecture2 added

--- a/week-1/lecture-2/VDO.ipynb
+++ b/week-1/lecture-2/VDO.ipynb
@@ -163,6 +163,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>How to swap two Variable</h4>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -771,6 +778,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -780,24 +805,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0b101\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "-3"
+       "1"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = -5\n",
-    "b = a >> 1\n",
-    "b"
+    "print(bin(-5))\n",
+    "# Right bit shifting to divide by any power of two.\n",
+    "# x = x / 2; is x>>1\n",
+    "a = 16\n",
+    "# print(bin(-3))\n",
+    "b = a >> 4\n",
+    "b\n",
+    "# LeftShift is used to Muliply by any power of two\n",
+    "# For example x = x * 2 can also be written as x<<1 or x = x*8 can be written as x<<3\n",
+    "\n",
+    "# b = a << 3\n",
+    "# b   \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -824,23 +867,23 @@
     "y = 4    # 00000100\n",
     "\n",
     "\n",
-    "# Bitwise and\n",
-    "print('x & y is',x&y)\n",
+    "# # Bitwise and\n",
+    "# print('x & y is',x&y)\n",
     "\n",
-    "# Bitwise or\n",
-    "print('x | y is',x|y)\n",
+    "# # Bitwise or\n",
+    "# print('x | y is',x|y)\n",
     "\n",
-    "# Bitwise not\n",
-    "print('~x is',~x)\n",
+    "# # Bitwise not\n",
+    "# print('~x is',~x)\n",
     "\n",
-    "# Bitwise XOR\n",
-    "print('x^y is',x^y)\n",
+    "# # Bitwise XOR\n",
+    "# print('x^y is',x^y)\n",
     "\n",
-    "# Bitwise right shift\n",
-    "print('x>>3 is',x>>3)\n",
+    "# # Bitwise right shift\n",
+    "# print('x>>3 is',x>>3)\n",
     "\n",
-    "# Bitwise left shift\n",
-    "print('x<<3 is',x<<3)"
+    "# # Bitwise left shift\n",
+    "# print('x<<3 is',x<<3)"
    ]
   },
   {
@@ -970,6 +1013,27 @@
     "num1, num2, num3 = 2, 3, 4\n",
     "print (num1 ** num2 + num3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 asign=\"center\">Assignment<h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">- Print \"Welcome to IcodeGuru\" message  without using buit-in print() Function? \n",
+    ">- Check which number is greater without using conditional statement. input x=20, y=30 output=30?\n",
+    ">- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
