--- a/week-4/lecture-1/numpy-1.ipynb
+++ b/week-4/lecture-1/numpy-1.ipynb
@@ -149,10 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dba905d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1.20.3', ['/home/iqran-star/anaconda3/lib/python3.9/site-packages/numpy'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.__version__ , np.__path__"
@@ -1499,10 +1510,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0b52089a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.90468379, 0.48277791, 0.63282394, 0.40729667, 0.57192859])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Creating 1-D array of 5 elements of random floats between 0 and 1\n",
     "arr = np.random.rand(5)\n",
@@ -1511,10 +1533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0cc0885d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.68005463, 3.39137292, 3.93881587, 3.31981995, 4.72068162])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Creating 1-D array of 5 elements of random floats between 0 and 10\n",
     "arr = np.random.rand(5)*10\n",
@@ -1656,18 +1689,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad60a9b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# creating 1-D array of size 6 of int type b/w interval (-5,4) \n",
-    "arr = np.random.randint(low = -5, high = 5, size = 4)\n",
-    "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5b72f8a5",
    "metadata": {},
    "outputs": [],
@@ -1759,105 +1780,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e1c720b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.eye(4)"
+    "# np.eye(4)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "549b3fac",
+   "cell_type": "markdown",
+   "id": "18045099",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "fb7d2a49",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "number = np.random.uniform(low =-10 , high = 10 , size =(1000 , 1))\n",
-    "positive_array = []\n",
-    "nagtive_array = []\n",
-    "\n",
-    "for i in number:\n",
-    "    if i < 0:\n",
-    "        nagtive_array.append(i)\n",
-    "    else:\n",
-    "        positive_array.append(i)\n",
-    "        "
+    "# Assignment"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "bba8de2e",
+   "cell_type": "markdown",
+   "id": "50402362",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "474\n"
-     ]
-    }
-   ],
    "source": [
-    "print(len(positive_array))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "ffc22887",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=sum(positive_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "57af0c3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y=sum(nagtive_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "e6f6d17e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dif = y - x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "efc390d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-5035.22650553]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dif)"
+    "## Problem-1\n",
+    "### Create a random array with 1000 observation and count the +ve and -ve observtion from a array"
    ]
   },
   {
@@ -1865,177 +1810,20 @@
    "id": "0d7e0477",
    "metadata": {},
    "source": [
-    "# Find the maximum distance between two numbers in vector also find the numbers"
+    "## Problem-2\n",
+    "### Find the maximum distance between two numbers in vector also find the numbers\n",
+    "\n",
+    "Array are:\n",
+    "\n",
+    "x=np.random.uniform(low=-10 , high=10 ,size = (1000 ,1 ))\n",
+    "\n",
+    "y=np.random.uniform(low=-10 , high=10 ,size = (1000 ,1 ))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "b8c138a5",
+   "cell_type": "markdown",
+   "id": "560f9f63",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "x1=np.random.uniform(low =-10 , high=20 , size = (100,1)) \n",
-    "x2=np.random.uniform(low =-10 , high=20 , size = (100,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "1d11ee4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[121.85309911]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# distance = (x2[0] - x1[0]) ** 2\n",
-    "# print(distance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "b7bfeb4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find all Distance\n",
-    "all_distance=[]\n",
-    "for i in range(len(x1)):\n",
-    "    distance=(x1[i] - x2[i])**2\n",
-    "    all_distance.append(distance)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "c06d10f4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[789.17551312]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Find the max number in array\n",
-    "n=max(all_distance)\n",
-    "print(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "5343833b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "81"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_distance.index(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "43c1ede1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[18.96877736]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x1[81])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "7ab1cf60",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-9.12349049]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x2[81])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ea9679f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "68da5174",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "varify = (x2[81] - x1[81])**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "a82175d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([789.17551312])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "varify"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1338cc2b",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
